# GameboyEmulator

./: CMakeLists.txt  README.md  compare.py
emulator/: CMakeLists.txt
emulator/include/: Application.h  BitwiseUtils.h  CPU.h  Cartridge.h  GameBoy.h  MemoryBus.h  PPU.h  Renderer.h  Timer.h
emulator/include/CPU/: CPU.h  OpcodeDetails.h  OpcodeNames.h
emulator/src/: Application.cpp  CPU.cpp  Cartridge.cpp  GameBoy.cpp  MemoryBus.cpp  PPU.cpp  Renderer.cpp  Timer.cpp  main.cpp
emulator/src/CPU/: CPU.cpp  OpcodeMapping.cpp  Opcodes.cpp
